# starwars-backend-quiz

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install-alias.sh  pyproject.toml
api/: main.py
api/models/: __init__.py  person.py  planet.py
api/routers/: insight.py  people.py  planets.py
api/services/: swapi_proxy.py
api/utils/: filters.py  pagination.py
cli/: main.py  utils.py
cli/commands/: people.py  planets.py
shared/: logger.py
tests/: test_cli.py  test_filtering.py  test_pagination.py  test_sorting.py
