[project]
name = "starwars-backend-quiz"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-decouple>=3.8",
    "ruff>=0.12.4",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".venv",
  "uv.lock"
]
lint.select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # import sorting
  "B",  # bugbear
  "UP", # pyupgrade
  "C90" # mccabe complexity
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]